force-app/main/default/objects/Review__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Previous organisation Offer Letter</inlineHelpText>
    <label>Offer Letter / Appraisal</label>
    <type>Checkbox</type>
</CustomField>