force-app/main/default/objects/Review__c/fields/Candidate_photo__c.field-meta.xml
<CustomField>
    <fullName>Candidate_photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate photo</label>
    <type>Checkbox</type>
</CustomField>