force-app/main/default/objects/Review__c/fields/CheckStatus__c.field-meta.xml
<CustomField>
    <fullName>CheckStatus__c</fullName>
    <formula>IF(TEXT(Review_Stage__c) = &quot;Shortlisted&quot;, 
    IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;,30, 30), 
    IF(TEXT(Review_Stage__c) = &quot;Rejected&quot;, 
        IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;,30,30), 
        IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;,30,30)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckStatus</label>
    <type>Text</type>
</CustomField>