force-app/main/default/objects/Review__c/fields/First_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>First_Interviewer__c</fullName>
    <label>First Interviewer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>