force-app/main/default/objects/Review__c/fields/Interviews__c.field-meta.xml
<CustomField>
    <fullName>Interviews__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interviews</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Interviews__c.Job_Application__c</field>
            <operation>equals</operation>
            <valueField>$Source.Job_Application__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Interviews__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>