force-app/main/default/objects/Review__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pan-card &amp; Aadhar card</inlineHelpText>
    <label>KYC</label>
    <type>Checkbox</type>
</CustomField>