force-app/main/default/objects/Review__c/fields/Marksheets__c.field-meta.xml
<CustomField>
    <fullName>Marksheets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Education documents</inlineHelpText>
    <label>Marksheets</label>
    <type>Checkbox</type>
</CustomField>