force-app/main/default/objects/Review__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Father&apos;s / Mother&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>