force-app/main/default/objects/Review__c/fields/Overall_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Review_Score__c</fullName>
    <formula>(VALUE(TEXT(Core_Competencies__c)) + VALUE(TEXT(Experience__c)) + VALUE(TEXT(Leadership_Skills__c)) + IF( Recommend_for_Hire__c , 5, 0) ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Review Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>