force-app/main/default/objects/Review__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <formula>Job_Application__r.Job_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Title</label>
    <type>Text</type>
</CustomField>