force-app/main/default/objects/Review__c/fields/Relieving_Experience_Letter__c.field-meta.xml
<CustomField>
    <fullName>Relieving_Experience_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relieving/Experience Letter</label>
    <type>Checkbox</type>
</CustomField>