force-app/main/default/objects/Review__c/fields/Review_Stage__c.field-meta.xml
<CustomField>
    <fullName>Review_Stage__c</fullName>
    <label>Review Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Interview Stage</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Documentation Pending</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Backout</fullName>
                <isActive>false</isActive>
                <label>Backout</label>
            </value>
            <value>
                <fullName>Joined</fullName>
                <isActive>false</isActive>
                <label>Joined</label>
            </value>
            <value>
                <fullName>Withdraw</fullName>
                <isActive>false</isActive>
                <label>Withdraw</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>