force-app/main/default/objects/Review__c/fields/Salary_Slip_Bank_statement__c.field-meta.xml
<CustomField>
    <fullName>Salary_Slip_Bank_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 Month Salary Slip / Bank statement</label>
    <type>Checkbox</type>
</CustomField>