force-app/main/default/objects/Review__c/fields/Second_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Second_Interviewer__c</fullName>
    <label>Second Interviewer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>