force-app/main/default/objects/Review__c/fields/Third_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Third_Interviewer__c</fullName>
    <label>Third Interviewer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>