force-app/main/default/objects/Review__c/recordTypes/Fresher_Trainee.recordType-meta.xml
<RecordType>
    <fullName>Fresher_Trainee</fullName>
    <active>true</active>
    <label>Fresher/Trainee</label>
</RecordType>