force-app/main/default/objects/Review__c/recordTypes/NotInUse.recordType-meta.xml
<RecordType>
    <fullName>NotInUse</fullName>
    <active>true</active>
    <label>NotInUse</label>
</RecordType>