force-app/main/default/objects/Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Review_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>