force-app/main/default/objects/Review__c/listViews/All_Reviews.listView-meta.xml
<ListView>
    <fullName>All_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Review_Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Reviews</label>
</ListView>